Added helper scripts for managing the machines remotely, cleaned up the scripts for managing processes on the machines themselves