@@ -12,18 +12,12 @@ export CONF_DIR=$USER_HOME/conf
 export LIB_DIR=$USER_HOME/lib
 export SERVER_DIR_LOCATION=$USER_HOME/members
 export IP_ADDRESS=`ifconfig eth0 2>/dev/null|awk '/inet addr:/ {print $2}'|sed 's/addr://'`
+export PUBLIC_IP_ADDRESS=`dig +short myip.opendns.com @resolver1.opendns.com`
 export LOCATOR_PORT=10334
+export LOCATOR_1_IP=172.31.39.160
+export LOCATOR_2_IP=172.31.39.161
 export PATH=$PATH:$JAVA_HOME/bin:$GEMFIRE/bin
 export CLASSPATH=$CLASSPATH:$GEMFIRE/lib/*:$JAVA_HOME/lib/tools.jar:$CONF_DIR/:$CONF_DIR/*:$LIB_DIR/:$LIB_DIR/*
 export LOCATOR_NAME="$(hostname)-locator"
 export SERVER_NAME="$(hostname)-server"
 
-#Server Configuration #
-export GF_JAVA_OPT="-server,-verbose:gc,-XX:+PrintGCTimeStamps,-XX:+PrintGCDetails,-Xloggc:gc.log\
-,-Xms40g,-Xmx40g\
-,-XX:+UseConcMarkSweepGC,-XX:+UseParNewGC\
-,-XX:CMSInitiatingOccupancyFraction=90\
-,-XX:+UseCompressedOops"
-
-#GFSH logging
-export JAVA_ARGS="-Dgfsh.log-dir=$GEMFIRE_WORKING/logs-gfsh "
